--- a/index.html
+++ b/index.html
@@ -48,6 +48,43 @@
                     <button class="modal-btn" data-modal-close><svg class="modal-icon" width="11" height="11">
                         <use href="./images/sprite.svg#icon-close"></use>
                     </svg></button>
+                    <form class="modal-form">
+                        <b class="form-title">Оставьте свои данные, мы вам перезвоним</b>
+                        <label class="form-group">
+                            <span class="form-label">Имя</span>
+                            <input class="form-input" type="text" name="user-name">              
+                            <svg class="form-icon" width="18" height="18">
+                                <use href="./images/sprite.svg#icon-person"></use>
+                            </svg>
+                        </label>
+                        <label class="form-group">
+                            <span class="form-label">Телефон</span>
+                            <input class="form-input" type="phone" name="user-phone">                
+                            <svg class="form-icon" width="18" height="18">
+                                <use href="./images/sprite.svg#icon-phone"></use>
+                            </svg>
+                        </label>
+                        <label class="form-group">     
+                            <span class="form-label">Почта</span>
+                            <input class="form-input" type="mail" name="user-mail">                
+                            <svg class="form-icon" width="18" height="18">
+                                <use href="./images/sprite.svg#icon-email"></use>
+                            </svg>
+                        </label>
+                        <label class="form-group">
+                        <span class="form-label">Комментарий</span>
+                        <textarea class="form-text" name="" id="" cols="30" rows="10" placeholder="Введите текст"></textarea>
+                        </label>
+                        <label class="form-policy-group">
+                            <input class="checkbox visually-hidden" type="checkbox" value="">
+                            <span class="custom-checkbox">
+                                <svg class="custom-checkbox-icon" width="16" height="15">
+                                    <use href="./images/sprite.svg#icon-check"></use>
+                                </svg></span>
+                            <span class="form-policy-discription">Соглашаюсь с рассылкой и принимаю <a href="" class="accent-discription">Условия договора</a></span>
+                        </label>                 
+                        <button class="submit-btn" type="submit">Отправить</button>
+                    </form>
                     <div class="modal-form">
                     </div></div>
                 </div>
@@ -293,7 +330,20 @@
                         <use href="./images/sprite.svg#icon-linkedin"></use>
                     </svg>
                 </a> </li>
-        </ul>
+        </ul></div>
+        <div class="footer-subscribe">
+            <b class="footer-title">Подпишитесь на рассылку</b>
+            <form class="subscribe-form" name="subscribe-form">
+                <label class="footer-form-group" for="">
+                    <input  class="footer-input" type="email" placeholder="E-mail">
+                    <button class="footer-submit-btn" type="submit">Подписаться
+                        <svg class="footer-form-icon" width="24" height="24">
+                            <use href="./images/sprite.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                
+                </label>
+            </form>
         </div>
         </div>
     </footer>
