--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <span class="form-label">Телефон</span>
                             <input class="form-input" type="phone" name="user-phone">                
                             <svg class="form-icon" width="18" height="18">
-                                <use href="./images/sprite.svg#icon-phone"></use>
+                                <use href="./images/sprite.svg#icon-phone-form"></use>
                             </svg>
                         </label>
                         <label class="form-group">     
@@ -304,8 +304,8 @@
         </address>
         </div>
         <div class="footer-socials">
-            <h2 class="footer-title">присоединяйтесь</h2>
-            <ul class="footer-socials list">
+            <p class="footer-title">присоединяйтесь</p>
+            <ul class="footer-socials-list">
             <li class="footer-socials-item"> <a class="footer-socials-link" href="" target="_blank" rel="noopener noreferrer"
                     aria-label="Instagram">
                     <svg class="footer-socials-icon" width="20" height="20">
@@ -332,7 +332,7 @@
                 </a> </li>
         </ul></div>
         <div class="footer-subscribe">
-            <b class="footer-title">Подпишитесь на рассылку</b>
+            <p class="footer-title">Подпишитесь на рассылку</p>
             <form class="subscribe-form" name="subscribe-form">
                 <label class="footer-form-group" for="">
                     <input  class="footer-input" type="email" placeholder="E-mail">
