--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <textarea class="form-text" name="" id="" cols="30" rows="10" placeholder="Введите текст"></textarea>
                         </label>
                         <label class="form-policy-group">
-                            <input class="checkbox visually-hidden" type="checkbox" value="">
+                            <input class="checkbox visually-hidden" type="checkbox" value="" required>
                             <span class="custom-checkbox">
                                 <svg class="custom-checkbox-icon" width="16" height="15">
                                     <use href="./images/sprite.svg#icon-check"></use>
