--- a/portfolio.html
+++ b/portfolio.html
@@ -154,8 +154,8 @@
             </address>
         </div>
         <div class="footer-socials">
-            <h2 class="footer-title">присоединяйтесь</h2>
-            <ul class="footer-socials list">
+            <p class="footer-title">присоединяйтесь</p>
+            <ul class="footer-socials-list">
                 <li class="footer-socials-item"> <a class="footer-socials-link" href="" target="_blank"
                         rel="noopener noreferrer" aria-label="Instagram">
                         <svg class="footer-socials-icon" width="20" height="20">
@@ -181,6 +181,20 @@
                         </svg>
                     </a> </li>
             </ul>
+        </div>
+        <div class="footer-subscribe">
+            <p class="footer-title">Подпишитесь на рассылку</p>
+            <form class="subscribe-form" name="subscribe-form">
+                <label class="footer-form-group" for="">
+                    <input class="footer-input" type="email" placeholder="E-mail">
+                    <button class="footer-submit-btn" type="submit">Подписаться
+                        <svg class="footer-form-icon" width="24" height="24">
+                            <use href="./images/sprite.svg#icon-send"></use>
+                        </svg>
+                    </button>
+
+                </label>
+            </form>
         </div>
     </div>
 </footer>
